# AIAgent-Rust

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  Template.env
backend/src/: agent.rs  api.rs  database.rs  main.rs
backend/src/wasm/: lib.rs
deepseek/: Dockerfile  app.py  requirements.txt
