[package]
name = "ai_agent_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
mongodb = "2.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
dotenvy = "0.15"
